Polish MazeGame documentation for portfolio use
Add a portfolio-focused top-level README while preserving the original university project files unchanged.